version/0.65/_sources/getting_started/learning.rst.txt


================
Learning PyMAPDL
================

Ansys has prepared multiple resources to help you to learn and use PyMAPDL.
You can access them from the website `Ansys Learning Resources <learning_resources_>`_.
In this page, you can find a summary of the available resources for MAPDL and PyMAPDL.




Downloads
===========

- You can try the Student Version of Ansys products in
  `Ansys Student Versions <ansys_student_version_>`_.
  These are versions valid during a year and with limited capabilities 
  regarding number of nodes, elements, etc.

- View and download :download:`PyMAPDL cheatsheet <Cheat_Sheet_PyMAPDL.pdf>` to help
  you to learn PyMAPDL.

- Visit :ref:`ref_examples` to learn how PyMAPDL can be
  used to solve different real problems.


Courses
==============

Ansys has prepared high quality courses to guide you through the learning process.


Intro to Python
---------------

The `Intro to Python <course_intro_python_>`_ course teaches you
the basis of the Python programming language.


Course content
~~~~~~~~~~~~~~

* Prerequisites - Installation of Python
* Fundamentals of Python - Lesson 1
* Analyzing Radiance Data - Lesson 2
* Repeating Actions with Loops - Lesson 3
* Storing Multiple Values in Lists - Lesson 4
* Making Choices - Lesson 5
* Analyzing Data from Multiple Files - Lesson 6
* Creating Functions - Lesson 7
* Defensive Programming - Lesson 8
* Debugging - Lesson 9
* Command Line Programs - Lesson 10
* Post Completion Survey
* Meet the Instructor



Getting Started with PyMAPDL
----------------------------

The `Getting Started with PyMAPDL <course_getting_started_pymapdl_>`_ course teaches
you about PyMAPDL, the Pythonic way to access Ansys MAPDL. 

Course content
~~~~~~~~~~~~~~

* Overview of PyMAPDL - Lesson 1
* PyMAPDL Language and Usage - Lesson 2
* PyMAPDL Categories - Lesson 3
* Getting Help - Lesson 4
* Post Completion Survey
* Meet the Instructors



Intro to Ansys Mechanical APDL Scripting
----------------------------------------

The `Intro to Ansys Mechanical APDL Scripting <course_intro_apdl_>`_
course teaches you how APDL, the Mechanical solver syntax language, works.

Course content
~~~~~~~~~~~~~~

* Overview of MAPDL (Lesson 1)
* Basics of APDL Language (Lesson 2)
* Solid Modeling & Meshing (Lesson 3)
* Defining Loads, BCs, and Solver Controls (Lesson 4)
* General Postprocessing (Lesson 5)
* Selection Logic (Lesson 6)
* More on Parameters (Arrays, \*GET) (Lesson 7)
* Post Completion Survey
* Meet the Instructors

.. vale off

Ansys Innovation Space
----------------------

.. vale on

You can find more courses for different Ansys product organized in 
different categories such as
`structures <ansys_innovation_space_structures_>`_,
`fluids <ansys_innovation_space_fluids_>`_,
`materials <ansys_innovation_space_materials_>`_ or
`3D design <ansys_innovation_space_geometry_>`_. 

You can find all the categories in `https://courses.ansys.com <ansys_innovation_space_>`_.

**NOTE**: You might need to create a free Ansys account to access these resources.

Ansys help
==========

`Ansys Help <ansys_help_>`_ is the official Ansys website for
documentation, tutorials and videos.

An `MAPDL introductory tutorials guide <ansys_introductory_mapdl_courses_>`_ which
cover different topics such as
`Structural tutorial <ansys_introtut_structures_>`_
`Thermal tutorial <ansys_introtut_thermal_>`_
`Electromagnetics tutorial <ansys_introtut_electromag_>`_
`Micro-Electromechanical System (MEMS) tutorial <ansys_introtut_mems_>`_
`Contact tutorial <ansys_introtut_contact_>`_ or
`Modal tutorial <ansys_introtut_modal_>`_

You can find documentation such as the
`Command reference guide <ansys_command_reference_guide_>`_,
`Verification manual guide <ansys_verification_manual_>`_ or
`Technology showcase guide <ansys_techdemo_guide_>`_.

The `Technology showcase guide <ansys_techdemo_guide_>`_ is a comprehensive guide with 
real-world example problems which present the broad simulation
capabilities of Ansys Mechanical APDL.
The problems demonstrate how to use Mechanical APDL to effectively 
and accurately solve interdisciplinary problems from a variety of
industries and engineering fields.
The problems are more substantive and complex than examples found
in the standard documentation set. The documentation thoroughly
examines the physics involved with each problem and the considerations
necessary for translating problems into numerical models.
You can find some of the technology showcase examples in PyMAPDL documentation 
`Technology Showcases <pymapdl_ex_ts_>`. For a more comprehensive list of
showcases, visit `Technology showcase guide <ansys_techdemo_guide_>`_.

**NOTE**: You might need to create a free Ansys account to access these resources.

Recommended articles
====================

* `Ansys Gets Into Open Source With GitHub <ansys_open_source_article_>`_
* `Access the Power of Ansys from the Python World <ansys_python_power_article_>`_
* PADT Inc.'s `Using Ansys Scripting with pyMAPDL, pyDPF-Post, and More - PART 1: Running and Post-Processing an Ansys Model Outside <padt_post_>`_

Feel free to email any educational or learning resource to |pyansys_contact|.